progress on setting up django

--- a/src/templates/plants/plant_list.html
+++ b/src/templates/plants/plant_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content%}
 
-{% for instance in plant_list%}
+{% for instance in object_list%}
 	<p>{{instance.name}}-{{instance.location}}</p>
 
 {%endfor%}
