building dynamic urls in django

--- a/src/templates/plants/plant_list.html
+++ b/src/templates/plants/plant_list.html
@@ -2,7 +2,7 @@
 {% block content%}
 
 {% for instance in object_list%}
-	<p>{{instance.name}}-{{instance.location}}</p>
+	<p>{{instance.name}}-<a href= '{{ instance.get_absolute_url }}'>{{instance.location}}</p>
 
 {%endfor%}
 {% endblock%}
