--- a/src/plants/templates/plants/plants_list.html
+++ b/src/plants/templates/plants/plants_list.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
 {% block content%}
 <h1> Click on your plants name to view their information or update</h1>
-{% for instance in object_list%}
-	<ul> <a href= '{{ instance.get_absolute_url }}'>{{instance.name}} </a>{{instance.location}}</p>
-		<form action= '.' method='POST'> {% csrf_token %} <a href='{{ instance.get_delete }}'>Delete </a>
 
-	</ul>
-	</form>
+	<table> 
+		<tr>
+			<th> Plant's Name</th>
+			<th> Plant's Location</th>
+			<th></th>
+		</tr>
+		{% for instance in object_list%}
+			<tr>
+				<td><a href= '{{ instance.get_absolute_url }}'>{{instance.name}} </a></td>
+				<td>{{instance.location}}</td>
+				<form action= '.' method='POST'> {% csrf_token %}<td> <a href='{{ instance.get_delete }}'>Delete </a></td></form>
+			</tr>
+		{%endfor%}
+	</table>
 
-{%endfor%}
 {% endblock%}
