--- a/src/plants/templates/plants/plants_list.html
+++ b/src/plants/templates/plants/plants_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content%}
 <h1> Click on your plants name to view their information or update</h1>
-
+<a href='{% url "create-plant" %}'>Add a plant</a>
 	<table> 
 		<tr>
 			<th> Plant's Name</th>
