--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,9 +6,9 @@
 
 
 {% if user.is_authenticated%}
-<p> You are logged in as {{user.username}}</p>
+<a href='{% url "create-plant" %}''>Add a plant</a>
 {% else %}
-<a href= "{% provider_login_url 'google' %}"> Login With Goog</a>
+<a href= "{% provider_login_url 'google' %}"> Login With Google</a>
 {% endif %}
 
 
