--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
 {% if user.is_authenticated%}
 <a href='{% url "create-plant" %}''>Add a plant</a>
 {% else %}
-<a href= "{% provider_login_url 'google' %}"> Login With Google</a>
+<button class="login"><a href= "{% provider_login_url 'google' %}"> Login With Google</a></button>
 {% endif %}
 
 
